--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8" />
-		<title>Условия пользования сервисом «Teya_robot»</title>
+		<title>Условия пользования сервисом «Nika_tinebot»</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			body {
@@ -31,16 +31,20 @@
 		</style>
 	</head>
 	<body>
-		<h1>Условия пользования&nbsp;сервисом «Teya_robot»:</h1>
+		<h1>Условия пользования&nbsp;сервисом «Nika_tinebot»:</h1>
 
 		<p>
 			<strong>Политика обработки персональных данных:</strong><br />
-			<a href="privacy_policy.html">https://ваш_домен/privacy_policy</a>
+			<a href="privacy_policy.html"
+				>https://tinkofoxil.github.io/nika-tinebot-site//privacy_policy</a
+			>
 		</p>
 
 		<p>
 			<strong>Пользовательское соглашение:</strong><br />
-			<a href="terms.html">https://ваш_домен/terms</a>
+			<a href="terms.html"
+				>https://tinkofoxil.github.io/nika-tinebot-site//terms</a
+			>
 		</p>
 	</body>
 </html>
